Agentforce/force-app/main/default/objects/Financial_Risk_History__c/Financial_Risk_History__c.object-meta.xml
<CustomObject>
    <label>Financial Risk History</label>
    <nameField>
        <displayFormat>FRH-{0}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Risk History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>