Agentforce/force-app/main/default/objects/Financial_Risk_History__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>Formula converts System: New Value Input field into formatted string for display to user.</description>
    <formula>IF(
AND(
System_Numerical_Indicator__c = TRUE,
NOT(ISBLANK(System_New_Value_Input__c))
),
(TEXT(CurrencyIsoCode) &amp; &quot; &quot;),NULL) &amp; System_New_Value_Input__c</formula>
    <label>New Value</label>
    <type>Text</type>
</CustomField>