Agentforce/force-app/main/default/objects/Financial_Risk_History__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <formula>IF(
				AND(
								System_Numerical_Indicator__c = TRUE,
								NOT(ISBLANK(System_Old_Value_Input__c))
								),
				(TEXT(CurrencyIsoCode) &amp; &quot; &quot;),NULL) &amp; System_Old_Value_Input__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Value</label>
    <type>Text</type>
</CustomField>