Agentforce/force-app/main/default/objects/Financial_Risk_History__c/fields/Old_Value_Numerical__c.field-meta.xml
<CustomField>
    <fullName>Old_Value_Numerical__c</fullName>
    <formula>If(System_Numerical_Indicator__c = TRUE, VALUE(SUBSTITUTE(System_Old_Value_Input__c,&quot;,&quot;,&quot;&quot;)),NULL)

/* Include SUBSTITUTE to remove commas as provided in Value Input field by DnB */</formula>
    <label>Old Value (Numerical)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>