Agentforce/force-app/main/default/objects/Financial_Risk_History__c/fields/System_New_Value_Input__c.field-meta.xml
<CustomField>
    <fullName>System_New_Value_Input__c</fullName>
    <inlineHelpText>String field to be used as input for New Value field. Formula field then used to return New Value String/Numerical in formatted manner</inlineHelpText>
    <label>System: New Value Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>