Agentforce/force-app/main/default/objects/Financial_Risk_History__c/fields/System_Numerical_Indicator__c.field-meta.xml
<CustomField>
    <fullName>System_Numerical_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set by Flow. Ticked if Numerical value change. Used to drive Delta calculations.</inlineHelpText>
    <label>System: Numerical Indicator</label>
    <type>Checkbox</type>
</CustomField>