Agentforce/force-app/main/default/objects/Financial_Risk_History__c/fields/System_Old_Value_Input__c.field-meta.xml
<CustomField>
    <fullName>System_Old_Value_Input__c</fullName>
    <label>System: Old Value Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>