Agentforce/force-app/main/default/objects/Financial_Risk_History__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Score</fullName>
            </value>
            <value>
                <fullName>Delinquency Score</fullName>
            </value>
            <value>
                <fullName>Failure Score</fullName>
            </value>
            <value>
                <fullName>Max Recommended Credit Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>